# csas-sharepoint

./: .gitignore  Makefile  PACKAGING.md  README.md  WARP.md  pyproject.toml  test_result_loading.py  validate_report.py
.github/: copilot-instructions.md  dependabot.yml
debian/: Jenkinsfile  README.Debian  README.source  changelog  control  copyright  csas-sharepoint.install  csas-sharepoint.links  csas-sharepoint.postinst  csas-sharepoint.postrm  io.github.spoje_net.csas_sharepoint.metainfo.xml  multiflexi-csas-sharepoint.install  multiflexi-csas-sharepoint.postinst  multiflexi-csas-sharepoint.prerm  rules
debian/man/: csas-sharepoint.1
multiflexi/: csas-sharepoint.app.json
nbproject/: project.properties
src/: csas2sharepoint.py  main.py
tests/: test_main.py
