[project]
name = "csas-sharepoint"
version = "0.1.0"
description = ""
authors = [
    {name = "CyberVitexus",email = "info@vitexsoftware.cz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "csas_sharepoint", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
